# TodoListRustAPI

./: .env  Cargo.toml  README.md  lists-of-tasks.db
migrations/2023-06-29-043651_lists/: up.sql
migrations/2023-06-29-043731_tasks/: down.sql  up.sql
src/: main.rs
src/db/: db_conn.rs  mod.rs  models.rs  schema.rs
src/handlers/: lists_handlers.rs  mod.rs  tasks_handlers.rs
