[package]
name = "rust-sqlite-learn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0"
actix-rt = "2.5"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
actix-cors = "0.6.4"
tokio = "1.29.1"

[dependencies.async-std]
version = "1.10"
features = ["attributes"]

[build-dependencies]
dotenv_codegen = "0.15.0"
